<resources>
    <string name="jupiter">Jupiter</string>
    <string name="jupiter_cancel">取消</string>
    <string name="jupiter_ok">确定</string>
    <string name="jupiter_return">返回</string>
    <string name="jupiter_logout">注销</string>
    <string name="jupiter_complete">完成</string>
    <string name="jupiter_undo">撤销</string>
    <string name="jupiter_cancel_edit">取消编辑</string>
    <string name="jupiter_edit">编辑</string>
    <string name="jupiter_new">新增</string>
    <string name="jupiter_add">添加</string>
    <string name="jupiter_single_choice">单选</string>
    <string name="jupiter_multi_choice">多选</string>
    <string name="jupiter_ne_version">发现新版本</string>
    <string name="jupiter_network_error">你的网络似乎有些问题，请检查一下网络设置。</string>
    <string name="jupiter_loading">加载中...</string>
    <string name="jupiter_search">搜索</string>

    <string name="jupiter_row_cell_title">测试标题内容</string>
    <string name="jupiter_row_cell_time">1小时前</string>

    <string name="jupiter_viewpager_indicator">%1$d/%2$d</string>

    <string name="jupiter_paging_listview_loadmore">点击加载更多</string>

    <string name="cube_views_load_more_loading">加载中...</string>
    <string name="cube_views_load_more_click_to_load_more">点击加载更多</string>
    <string name="cube_views_load_more_loaded_no_more">全部数据加载完毕</string>
    <string name="cube_views_load_more_loaded_empty">数据为空</string>
    <string name="cube_views_load_more_error">加载失败,点击重试</string>

    <string name="yuan">元</string>

    <string name="update_prog_title">检查到更新</string>
    <string name="update_prog_msg">更新内容：\n %1$s</string>
    <string name="update_error">下载更新包出现错误，请稍后重新尝试.</string>
    <string name="update_wating">正在下载更新程序，请稍后.</string>
</resources>
