<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/row_style_background">

    <RelativeLayout
        android:id="@+id/row_style_sutitle"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:id="@+id/image_title_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="26dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:visibility="visible">

            <ImageView
                android:id="@+id/main_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/user_head" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/time_tv"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:text="@string/jupiter_row_cell_title" />

                    <TextView
                        android:id="@+id/time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="12dp"
                        android:text="@string/jupiter_row_cell_time" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/sutitle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/jupiter" />

                <LinearLayout
                    android:id="@+id/subtitle_item_container"
                    android:orientation="horizontal"
                    android:showDividers="middle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/arrow_right_ll"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/hot_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/jupiter_ne_version"
                android:textColor="@color/whites"
                android:layout_marginRight="5dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/selectmode_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/selector_empty"/>

            <ImageView
                android:id="@+id/arrow_right_iv"
                android:layout_gravity="center"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/arrow_right" />

            <ImageButton
                android:id="@+id/arrow_right_button"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:background="@drawable/user_head" />

        </LinearLayout>

        <View
            android:id="@+id/line_v"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</RelativeLayout>