<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_bar_rl"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/title_color"
    android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:background="@color/transparent"
        android:id="@+id/title_left_ll"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent">

            <ImageView
                android:id="@+id/title_left_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:src="@drawable/title_left_btn_return"
                android:visibility="gone"
                android:background="#00000000" />

            <TextView
                android:id="@+id/title_left_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/whites"
                android:textSize="16dp"
                android:visibility="gone"
                android:layout_gravity="center_vertical"
                android:background="@color/transparent"
                android:text="@string/jupiter_return" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/title_center_ll"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whites"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/jupiter" />

        <TextView
            android:id="@+id/title_sutitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:gravity="center"
            android:textColor="@color/whites"
            android:background="@color/transparent"
            android:visibility="gone"
            android:text="选中了3个图片，2个文件"
            android:layout_gravity="center" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="@color/transparent"
        android:id="@+id/title_right_ll"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/title_right_iv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/classification"
                android:background="@color/transparent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title_right_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whites"
                android:text="@string/jupiter_complete"
                android:textSize="16dp"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                android:background="@color/transparent" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
