<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/left_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/left_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/user_head" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/left_iv"
                android:layout_alignParentTop="true"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/left_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/jupiter_row_cell_title"
                        android:textColor="@color/black"
                        android:textSize="16dp" />
                    <TextView
                        android:id="@+id/left_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_toRightOf="@id/left_title_tv"
                        android:gravity="right"
                        android:text="@string/jupiter_row_cell_time"
                        android:textSize="12dp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/left_title_tip_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/left_title_tv"
                    android:layout_marginLeft="3dp"
                    android:text="@string/jupiter"
                    android:textSize="11dp"
                    android:visibility="gone"
                    android:textColor="#374760"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="3dp"
                    android:padding="8dp"
                    android:background="@drawable/button_blue">
                    <TextView
                        android:id="@+id/left_content_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:text="评论内容"/>
                </LinearLayout>
        </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/right_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageView
                android:id="@+id/right_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:src="@drawable/user_head" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toLeftOf="@id/right_iv"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"
                android:gravity="right">
                <TextView
                    android:id="@+id/right_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/jupiter_row_cell_time"
                    android:textSize="12dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_gravity="right"
                    android:padding="8dp"
                    android:background="@drawable/button_green">
                    <TextView
                        android:id="@+id/right_content_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:text="评论内容"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>